--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="container"><h1 id="title">Tweeter</h1><input type="text" placeholder="What's on your mind?" id="input"><div id="post">Twit</div><div id="posts"></div></div>
     <script src="render.js"></script> <!-- You'll create this soon --><script src="logic.js"></script> <!-- You've got this --><script src="main.js"></script> <!-- You'll create this soon -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
